--- a/firststeps/the-api-project1/src/main/resources/application.yml
+++ b/firststeps/the-api-project1/src/main/resources/application.yml
@@ -1,1 +1,15 @@
-spring.application.name=the-api-project1
+#spring.application.name=the-api-project1
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/api_project
+    username: postgres
+    password: 1234
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
